[Doc] Update Docs for Files() Signed-off-by: EsoragotoSpirit <wanglichen@starrocks.com>